fixed alignment

--- a/assets/css/challenge1.css
+++ b/assets/css/challenge1.css
@@ -176,6 +176,7 @@ position:absolute;
 }
 
 .container1 img{
+  margin: 10px 0px;
   width: 100%;
   height: auto;
   border: 5px solid black;
@@ -188,9 +189,9 @@ position:absolute;
 
 .container2 img , .container3 img{
   width: 90%;
-  height: 80%;
+  height: 95%;
   border: 5px solid rgb(0, 0, 0);
-  margin: 10px 5px;
+  margin: 5px 5px;
   opacity: 50%;
 }
 
